Fix: cdNm 생성로직 오류 수정